<resources>
    <string name="app_name">医通百通</string>

    <string name="forget_password">忘记密码</string>
    <string name="set_am_phone_number">手机号/用户名</string>
    <string name="verify_code">验证码</string>
    <string name="please_verify_code">请输入验证码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="login_hint_password">密 码</string>
    <string name="find_password">找回密码</string>
    <string name="find_password_success">找回密码成功！</string>
    <string name="regist">注册</string>

    <string name="accout_ceter">会员中心</string>
    <string name="user_ceter">我的账户</string>
    <string name="shop_guide">意见反馈</string>
    <string name="inviting_friends">关于我们</string>
    <string name="add_friends">加入我们</string>
    <string name="scan">扫一扫</string>
    <string name="feedback_title">意见反馈</string>
    <string name="setting">设置</string>
    <string name="daily_cash">个人钱包</string>

    <string name="first_menu">首页</string>
    <string name="second_menu">动态</string>
    <string name="third_menu">消息</string>
    <string name="four_menu">推荐</string>

    <string name="jingdong_pull_label">下拉可以刷新</string>
    <string name="jingdong_refreshing_label">正在加载中</string>
    <string name="jingdong_release_label">松开后刷新</string>

    <string name="tmall_pull_label">下拉刷新</string>
    <string name="tmall_refreshing_label">正在刷新...</string>
    <string name="tmall_release_label">松开立即刷新</string>

    <string name="forget_pwd_input_phone">请输入您的手机号码</string>
    <string name="forget_pwd_input_pwd">6-16位数字或字母</string>
    <string name="register_login">注册并登录</string>

    <string name="de_actionbar_sub_group">"群组"</string>
    <string name="de_actionbar_sub_private">"我的私人会话"</string>
    <string name="de_actionbar_sub_discussion">"我的讨论组"</string>
    <string name="de_actionbar_sub_system">"系统消息"</string>
    <string name="de_actionbar_sub_defult">"聊天"</string>
    <string name="de_actionbar_set_public">"公众号"</string>
    <string name="de_actionbar_system">"系统消息"</string>

    <string name="launched_location_sharing">发起了位置共享</string>
    <string name="location_sharing_ended">位置共享已结束</string>
    <string name="location">位置</string>
    <string name="send_location">发送位置</string>
    <string name="real_time_location_sharing">实时位置共享</string>
    <string name="fetching">获取中……</string>
    <string name="geographical_position">地理位置</string>
    <string name="you_are_sharing_location">你正在共享位置</string>
    <string name="person_is_sharing_loaction">人正在共享位置</string>
    <string name="persons_are_sharing_loaction">人正在共享位置</string>
    <string name="location_sharing_exit_promt">退出当前页面将会终止实时位置共享,确定退出？</string>
    <string name="prompt">提示</string>
    <string name="launched_a_location_sharing">我发起了位置共享</string>

    <string name="content">请输入您的反馈意见，我们将不断优化体验</string>
    <string name="contact">请输入您的手机号码或邮箱地址</string>
    <string name="feedback_type">反馈类型</string>
    <string name="function_option">功能意见</string>
    <string name="surface_option">界面意见</string>
    <string name="operation_option">操作意见</string>
    <string name="other_option">其他</string>
    <string name="feedback_content_not_empty">反馈内容不能为空</string>
    <string name="feedback_user_not_empty">联系人不能为空</string>
    <string name="username_format_error">联系人格式错误</string>
    <string name="feedback_success">反馈成功</string>
    <string name="feedback_fail">反馈失败</string>
    <string name="hint_pay">输入金额</string>
    <string name="add_alipay">添加支付宝账号</string>
    <string name="add_alipay_success">添加支付宝账号成功</string>
    <string name="real_name">真实姓名</string>
    <string name="alipay_account">支付宝账号</string>
    <string name="alipay_input_hint">与真实姓名对应账号(邮箱或手机号)</string>
    <string name="jiebang_sure">确认</string>
    <string name="withdrawals">提现</string>
    <string name="withdrawals_current_number">当前点券</string>
    <string name="withdrawals_desc">提现详情</string>
    <string name="withdrawals_max_toast">提现不能大于10000</string>
    <string name="withdrawals_money">提现点券</string>
    <string name="withdrawals_money_1">提现金额</string>
    <string name="withdrawals_number">当前余额为%s 元</string>
    <string name="withdrawals_request_success">申请提交成功，请以实际到账为准</string>
    <string name="withdrawals_style">提现方式</string>
    <string name="withdrawals_to_account">提现至账户</string>
    <string name="yuan">点券</string>
    <string name="yuan_1">元</string>
    <string name="please_input_int">请输入整数（必须为100的整数）</string>
    <string name="withdrawals_to_bank_card_finish_warning">提现至银行卡需1-2个工作日到账。</string>
    <string name="withdrawalsing">提现处理中…</string>
    <string name="tip">付费参考：我们网站给出的参考价格是：\n手机APP问诊：教授，主任10-200元/次；\n主治5-200元/次，医师5-200元/次。\n具体由医生自己在会员中心填写参考价格，患者按自己的判断自主付费。\n电话问诊：100—200元/15分钟。\n图文诊断: 50—100元/次。\n大病会诊：教授，主任300-5000元/病例。</string>

    <string name="push_service">消息推送使用规则(违犯本规则，本网站有权停止涉事账号的服务，视严重程度，决定是否采取必要的法律措施)：\n
4.1 遵守中华人民共和国相关法律法规，包括但不限于《中华人民共和国计算机信息系统安全保护条例》、《计算机软件保护条例》、《最高人民法院关于审理涉及计算机网络著作权纠纷案件适用法律若干问题的解释(法释[2004]1号)》、《全国人大常委会关于维护互联网安全的决定》、《互联网电子公告服务管理规定》、《互联网新闻信息服务管理规定》、《互联网著作权行政保护办法》和《信息网络传播权保护条例》等有关计算机互联网规定和知识产权的法律和法规、实施办法。\n
4.2 用户对其自行发表、上传或传送的内容负全部责任，所有用户不得在本站任何页面发布、转载、传送含有下列内容之一的信息，否则本站有权自行处理并不通知用户：\n
(1)违反宪法确定的基本原则的；\n
(2)危害国家安全，泄漏国家机密，颠覆国家政权，破坏国家统一的；\n
(3)损害国家荣誉和利益的；\n
(4)煽动民族仇恨、民族歧视，破坏民族团结的；\n
(5)破坏国家宗教政策，宣扬邪教和封建迷信的；\n
(6)散布谣言，扰乱社会秩序，破坏社会稳定的；\n
(7)散布淫秽、色情、赌博、暴力、恐怖或者教唆犯罪的；\n
(8)侮辱或者诽谤他人，侵害他人合法权益的；\n
(9)煽动非法集会、结社、游行、示威、聚众扰乱社会秩序的；\n
(10)以非法民间组织名义活动的；\n
(11)含有法律、行政法规禁止的其他内容的。\n
4.3 用户承诺对其发表或者上传于本站的所有信息(即属于《中华人民共和国著作权法》规定的作品，包括但不限于文字、图片、音乐、电影、表演和录音录像制品和电脑程序等)均享有完整的知识产权，或者已经得到相关权利人的合法授权；如用户违反本条规定造成本站被第三人索赔的，用户应全额补偿本站一切费用(包括但不限于各种赔偿费、诉讼代理费及为此支出的其它合理费用)；\n
4.4 当第三方认为用户发表或者上传于本站的信息侵犯其权利，并根据《信息网络传播权保护条例》或者相关法律规定向本站发送权利通知书时，用户同意本站可以自行判断决定删除涉嫌侵权信息，除非用户提交书面证据材料排除侵权的可能性，本站将不会自动恢复上述删除的信息；\n
(1)不得为任何非法目的而使用网络服务系统；\n
(2)遵守所有与网络服务有关的网络协议、规定和程序； (3)不得利用本站进行任何可能对互联网的正常运转造成不利影响的行为；\n
(4)不得利用本站进行任何不利于本站的行为。\n
4.5 如用户在使用网络服务时违反上述任何规定，本站有权要求用户改正或直接采取一切必要的措施(包括但不限于删除用户张贴的内容、暂停或终止用户使用网络服务的权利)以减轻用户不当行为而造成的影响。\n
五、隐私保护\n
5.1 本站不对外公开或向第三方提供单个用户的注册资料及用户在使用网络服务时存储在本站的非公开内容，但下列情况除外：\n
(1)事先获得用户的明确授权；\n
(2)根据有关的法律法规要求；\n
(3)按照相关政府主管部门的要求；\n
(4)为维护社会公众的利益。</string>
</resources>
