<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:id="@+id/style_item_layout"
        android:layout_width="fill_parent"
        android:layout_height="171.0dip">

        <ImageView
            android:id="@+id/ok_image"
            android:layout_width="fill_parent"
            android:layout_height="60.0dip"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30.0dip"
            android:src="@mipmap/details_finished" />

        <TextView
            android:id="@+id/withdrawls_ing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ok_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18.0dip"
            android:text="@string/withdrawalsing"
            android:textColor="@color/color_font_main"
            android:textSize="@dimen/text_verysmall" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/input_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/style_item_layout"
        android:background="@color/white">

        <TextView
            android:id="@+id/withdrawals_number_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_avatar"
            android:layout_marginLeft="10.0dip"
            android:gravity="center_vertical"
            android:text="@string/withdrawals_money_1"
            android:textColor="@color/color_font_sub_gray"
            android:textSize="@dimen/text_verysmall" />

        <TextView
            android:id="@+id/withdrawals_yuan_edittext"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_avatar"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10.0dip"
            android:gravity="center|right"
            android:text="@string/yuan_1"
            android:textColor="@color/color_font_main"
            android:textSize="@dimen/text_verysmall" />

        <View
            android:id="@+id/current_yuan_line"
            android:layout_width="wrap_content"
            android:layout_height="0.5dip"
            android:layout_below="@+id/withdrawals_yuan_edittext"
            android:background="@color/light_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_avatar"
            android:layout_below="@+id/current_yuan_line"
            android:layout_marginLeft="10.0dip"
            android:gravity="center_vertical"
            android:text="@string/withdrawals_to_account"
            android:textColor="@color/color_font_sub_gray"
            android:textSize="@dimen/text_verysmall" />

        <TextView
            android:id="@+id/withdrawls_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_avatar"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/current_yuan_line"
            android:layout_marginRight="10.0dip"
            android:gravity="center|right"
            android:textColor="@color/color_font_main"
            android:textSize="@dimen/text_verysmall" />
    </RelativeLayout>
</RelativeLayout>