<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
     >

    <LinearLayout
        android:id="@+id/ll_02"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp" >

        <TextView
            android:id="@+id/tv_scenario_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/feedback_type"
            android:textColor="@color/text_scenario_name"
            android:textSize="18sp" >
        </TextView>

        <LinearLayout
            android:id="@+id/select_feedback_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/smarthome_button_base_selector"
            android:padding="5dp"
            android:gravity="right" >

            <TextView
                android:id="@+id/tv_feedback_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/function_option"
                android:textColor="@color/color_bg_green"
                android:textSize="18sp" >
            </TextView>

            <ImageView
                android:id="@+id/img_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="15dp"
                android:src="@mipmap/icon_more_scence" >
            </ImageView>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@+id/ll_02"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/view_bg" />

    <RelativeLayout
        android:id="@+id/rl_01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp" >

        <EditText
            android:id="@+id/et_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et"
            android:gravity="left"
            android:hint="@string/content"
            android:lineSpacingMultiplier="1.2"
            android:lines="7"
            android:maxLength="120"
            android:textColor="@color/text_content"
            android:textColorHint="@color/text_content_hint"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/et_content"
            android:layout_alignRight="@+id/et_content"
            android:hint="0/120"
            android:padding="10dp"
            android:textColor="@color/text_num"
            android:textColorHint="@color/text_num_hint"
            android:textSize="14sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_contact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_01"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/et"
        android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.@"
        android:gravity="left"
        android:hint="@string/contact"
        android:padding="10dp"
        android:textColor="@color/text_contact"
        android:textColorHint="@color/text_contact_hint"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*备注:已登录用户可无须填写联系方式"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="3dp"
        android:textColor="@color/lsq_color_red"
        android:layout_below="@+id/et_contact"/>

</RelativeLayout>